badge alignment fix

--- a/src/styles/effect-box.css
+++ b/src/styles/effect-box.css
@@ -7,8 +7,12 @@
     color: azure;
   }
 
-  .dex-screen {
+  .dex-color {
     background-color: #2f2f2f;
+  }
+
+  .dex-screen {
+    padding-bottom: 1em;
   }
 
   .effect-title {
